# automation-scripts

./: .env.example  .gitignore  README.md  pyproject.toml  run_feishu.py
common/: __init__.py  config_loader.py  tray_manager.py
configs/: feishu.toml
scripts/: feishu_reminder.py
